--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <footer class="foot hidden" id="foot">
     <div>© SaveTools · Светофор на зелёном: #4F9E09</div>
-    <div><a href="./404.html">Проверить 404</a></div>
+    <div><a href="https://t.me/SaveToolsV2">Telegram</a></div>
   </footer>
 
   <!-- ДАННЫЕ ПРОГРАММ -->
