--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0b0f0a" />
   <title>SaveTools — Utilities Hub</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='12' fill='%234F9E09'/%3E%3Cpath d='M14 40h36v6H14zM17 18h30v4H17zM20 26h24v4H20z' fill='%230b0f0a'/%3E%3C/svg%3E" />
+  <link rel="icon" href="Images/photo_2025-08-03_10-05-43.jpg" />
 </head>
 <body>
   <!-- 3D фон -->
