--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0b0f0a" />
-  <title>SaveTools — Utilities Hub</title>
+  <title>SaveTools v2</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="Images/photo_2025-08-03_10-05-43.jpg" />
 </head>
@@ -15,14 +15,14 @@
   <!-- Экран доступа -->
   <div class="gate" id="gate">
     <div class="input-card">
-      <h2 class="brand">SaveTools</h2>
+      <h2 class="brand">SaveTools v2</h2>
       <label class="floating">
         <input type="password" id="access-code" placeholder=" " autocomplete="off" />
         <span>ACCESS_CODE</span>
       </label>
       <button id="enterBtn" class="btn primary full">Войти</button>
       <div class="error" id="error-msg">Неверный код</div>
-      <p class="hint">Подсказка: код можно сменить в <code>script.js</code> или отключить проверку вовсе.</p>
+      <p class="hint">⚠ Подсказка: Если тут пароль то значит что на <code>SaveTools v2</code> технические работы!</p>
     </div>
   </div>
 
@@ -250,3 +250,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
