--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <input id="q" class="search" type="search" placeholder="Поиск…" />
   </div>
 
+  
+
   <div class="control">
     <details class="dropdown" id="filters">
       <summary>Фильтры</summary>
@@ -103,149 +105,226 @@
   <!-- ДАННЫЕ ПРОГРАММ -->
   <script id="tools-data" type="application/json">[
     {
-      "id": "process-hacker",
-      "name": "Process Hacker",
-      "desc": "Расширенный диспетчер задач",
-      "href": "https://pixelglimmer.github.io/Programms/processhacker-2.39-setup.exe",
-      "os": ["Windows"],
-      "tags": ["system", "monitoring"],
-      "size": "12.4 MB",
-      "version": "2.39",
-      "updated": "2025-08-22"
+        "id": "process-hacker",
+        "name": "Process Hacker",
+        "desc": "Расширенный диспетчер задач",
+        "href": "https://pixelglimmer.github.io/Programms/processhacker-2.39-setup.exe",
+        "os": [
+            "Windows"
+        ],
+        "tags": [
+            "system",
+            "monitoring"
+        ],
+        "size": "12.4 MB",
+        "version": "2.39",
+        "updated": "2025-08-22",
+        "new_utility": false
     },
     {
-      "id": "anydesk",
-      "name": "AnyDesk",
-      "desc": "Удалённый доступ к ПК",
-      "href": "https://pixelglimmer.github.io/Programms/AnyDesk.exe",
-      "os": ["Windows", "macOS", "Linux"],
-      "tags": ["remote", "network"],
-      "size": "5.1 MB",
-      "version": "8.x",
-      "updated": "2025-07-11"
+        "id": "anydesk",
+        "name": "AnyDesk",
+        "desc": "Удалённый доступ к ПК",
+        "href": "https://pixelglimmer.github.io/Programms/AnyDesk.exe",
+        "os": [
+            "Windows",
+            "macOS",
+            "Linux"
+        ],
+        "tags": [
+            "remote",
+            "network"
+        ],
+        "size": "5.1 MB",
+        "version": "8.x",
+        "updated": "2025-07-11",
+        "new_utility": false
     },
     {
-      "id": "autohotkey",
-      "name": "AutoHotkey",
-      "desc": "Скрипты автоматизации для Windows",
-      "href": "https://pixelglimmer.github.io/Programms/AutoHotkey_2.0.19_setup.exe",
-      "os": ["Windows"],
-      "tags": ["automation", "productivity"],
-      "size": "3.6 MB",
-      "version": "2.0.19",
-      "updated": "2025-03-01"
+        "id": "autohotkey",
+        "name": "AutoHotkey",
+        "desc": "Скрипты автоматизации для Windows",
+        "href": "https://pixelglimmer.github.io/Programms/AutoHotkey_2.0.19_setup.exe",
+        "os": [
+            "Windows"
+        ],
+        "tags": [
+            "automation",
+            "productivity"
+        ],
+        "size": "3.6 MB",
+        "version": "2.0.19",
+        "updated": "2025-03-01",
+        "new_utility": false
     },
     {
-      "id": "simple-unlocker",
-      "name": "Simple Unlocker",
-      "desc": "Снятие ограничений Windows без сторонних утилит",
-      "href": "https://pixelglimmer.github.io/Programms/simpleunlocker_release.zip",
-      "os": ["Windows"],
-      "tags": ["system"],
-      "size": "120 KB",
-      "version": "1.0",
-      "updated": "2025-08-19"
+        "id": "simple-unlocker",
+        "name": "Simple Unlocker",
+        "desc": "Снятие ограничений Windows без сторонних утилит",
+        "href": "https://pixelglimmer.github.io/Programms/simpleunlocker_release.zip",
+        "os": [
+            "Windows"
+        ],
+        "tags": [
+            "system"
+        ],
+        "size": "120 KB",
+        "version": "1.0",
+        "updated": "2025-08-19",
+        "new_utility": false
     },
     {
-      "id": "keyviz",
-      "name": "KeyViz",
-      "desc": "Показ нажатий клавиш на экране",
-      "href": "https://pixelglimmer.github.io/Programms/Keyviz-v1.0.6.exe",
-      "os": ["Windows"],
-      "tags": ["productivity", "streaming"],
-      "size": "2.4 MB",
-      "version": "1.0.6",
-      "updated": "2025-05-10"
+        "id": "keyviz",
+        "name": "KeyViz",
+        "desc": "Показ нажатий клавиш на экране",
+        "href": "https://pixelglimmer.github.io/Programms/Keyviz-v1.0.6.exe",
+        "os": [
+            "Windows"
+        ],
+        "tags": [
+            "productivity",
+            "streaming"
+        ],
+        "size": "2.4 MB",
+        "version": "1.0.6",
+        "updated": "2025-05-10",
+        "new_utility": false
     },
     {
-      "id": "makutweaker",
-      "name": "MakuTweaker",
-      "desc": "Глубокая настройка Windows",
-      "href": "https://pixelglimmer.github.io/Programms/MakuTweaker Setup.exe",
-      "os": ["Windows"],
-      "tags": ["tweaks", "system"],
-      "size": "1.9 MB",
-      "version": "2.4",
-      "updated": "2025-06-04"
+        "id": "makutweaker",
+        "name": "MakuTweaker",
+        "desc": "Глубокая настройка Windows",
+        "href": "https://pixelglimmer.github.io/Programms/MakuTweaker Setup.exe",
+        "os": [
+            "Windows"
+        ],
+        "tags": [
+            "tweaks",
+            "system"
+        ],
+        "size": "1.9 MB",
+        "version": "2.4",
+        "updated": "2025-06-04",
+        "new_utility": false
     },
     {
-      "id": "dclear",
-      "name": "DClear",
-      "desc": "Очистка диска (by PixelGlimmer)",
-      "href": "https://pixelglimmer.github.io/Programms/DClear.pyw",
-      "os": ["Windows"],
-      "tags": ["cleanup", "system"],
-      "size": "8 KB",
-      "version": "0.9",
-      "updated": "2025-02-12"
+        "id": "dclear",
+        "name": "DClear",
+        "desc": "Очистка диска (by PixelGlimmer)",
+        "href": "https://pixelglimmer.github.io/Programms/DClear.pyw",
+        "os": [
+            "Windows"
+        ],
+        "tags": [
+            "cleanup",
+            "system"
+        ],
+        "size": "8 KB",
+        "version": "0.9",
+        "updated": "2025-02-12",
+        "new_utility": false
     },
     {
-      "id": "runasti",
-      "name": "RunAsTI64",
-      "desc": "Запуск от TrustedInstaller",
-      "href": "https://pixelglimmer.github.io/Programms/RunAsTI64.exe",
-      "os": ["Windows"],
-      "tags": ["elevation", "system"],
-      "size": "92 KB",
-      "version": "1.1",
-      "updated": "2025-04-01"
+        "id": "runasti",
+        "name": "RunAsTI64",
+        "desc": "Запуск от TrustedInstaller",
+        "href": "https://pixelglimmer.github.io/Programms/RunAsTI64.exe",
+        "os": [
+            "Windows"
+        ],
+        "tags": [
+            "elevation",
+            "system"
+        ],
+        "size": "92 KB",
+        "version": "1.1",
+        "updated": "2025-04-01",
+        "new_utility": false
     },
     {
-      "id": "rarreg",
-      "name": "rarreg.key",
-      "desc": "Ключ для WinRAR (скопировать рядом с WinRAR)",
-      "href": "https://pixelglimmer.github.io/Programms/rarreg.key",
-      "os": ["Windows"],
-      "tags": ["archiver"],
-      "size": "1 KB",
-      "version": "",
-      "updated": "2025-01-20"
+        "id": "rarreg",
+        "name": "rarreg.key",
+        "desc": "Ключ для WinRAR (скопировать рядом с WinRAR)",
+        "href": "https://pixelglimmer.github.io/Programms/rarreg.key",
+        "os": [
+            "Windows"
+        ],
+        "tags": [
+            "archiver"
+        ],
+        "size": "1 KB",
+        "version": "",
+        "updated": "2025-01-20",
+        "new_utility": false
     },
     {
-      "id": "zapret",
-      "name": "zapret-discord-youtube",
-      "desc": "Снижение блокировок для Discord/YT (репозиторий релизов)",
-      "href": "https://github.com/Flowseal/zapret-discord-youtube/releases",
-      "os": ["Windows", "Linux"],
-      "tags": ["network"],
-      "size": "—",
-      "version": "—",
-      "updated": "2025-07-30"
+        "id": "zapret",
+        "name": "zapret-discord-youtube",
+        "desc": "Снижение блокировок для Discord/YT (репозиторий релизов)",
+        "href": "https://github.com/Flowseal/zapret-discord-youtube/releases",
+        "os": [
+            "Windows",
+            "Linux"
+        ],
+        "tags": [
+            "network"
+        ],
+        "size": "—",
+        "version": "—",
+        "updated": "2025-07-30",
+        "new_utility": false
     },
     {
-      "id": "python313",
-      "name": "Python 3.13 (Win x64)",
-      "desc": "Официальный инсталлятор Python 3.13.5",
-      "href": "https://www.python.org/ftp/python/3.13.5/python-3.13.5-amd64.exe",
-      "os": ["Windows"],
-      "tags": ["dev"],
-      "size": "28 MB",
-      "version": "3.13.5",
-      "updated": "2025-09-05"
+        "id": "python313",
+        "name": "Python 3.13 (Win x64)",
+        "desc": "Официальный инсталлятор Python 3.13.5",
+        "href": "https://www.python.org/ftp/python/3.13.5/python-3.13.5-amd64.exe",
+        "os": [
+            "Windows"
+        ],
+        "tags": [
+            "dev"
+        ],
+        "size": "28 MB",
+        "version": "3.13.5",
+        "updated": "2025-09-05",
+        "new_utility": false
     },
     {
-      "id": "vmware",
-      "name": "VMware Workstation 17 Pro",
-      "desc": "Виртуальные машины для ПК",
-      "href": "https://5mc2yl.soft-load.eu/b6/6/4/8d93ca35692337d9caa3847f55beacc4/VMware-workstation-full-17.6.4-24832109.exe",
-      "os": ["Windows"],
-      "tags": ["virtualization"],
-      "size": "280 MB",
-      "version": "17.6.4",
-      "updated": "2025-08-02"
+        "id": "vmware",
+        "name": "VMware Workstation 17 Pro",
+        "desc": "Виртуальные машины для ПК",
+        "href": "https://5mc2yl.soft-load.eu/b6/6/4/8d93ca35692337d9caa3847f55beacc4/VMware-workstation-full-17.6.4-24832109.exe",
+        "os": [
+            "Windows"
+        ],
+        "tags": [
+            "virtualization"
+        ],
+        "size": "280 MB",
+        "version": "17.6.4",
+        "updated": "2025-08-02",
+        "new_utility": false
     },
     {
-      "id": "vbox",
-      "name": "VirtualBox 7.2.0",
-      "desc": "VirtualBox от Oracle",
-      "href": "https://download.virtualbox.org/virtualbox/7.2.0/VirtualBox-7.2.0-170228-Win.exe",
-      "os": ["Windows", "Linux", "macOS"],
-      "tags": ["virtualization"],
-      "size": "107 MB",
-      "version": "7.2.0",
-      "updated": "2025-06-15"
+        "id": "vbox",
+        "name": "VirtualBox 7.2.0",
+        "desc": "VirtualBox от Oracle",
+        "href": "https://download.virtualbox.org/virtualbox/7.2.0/VirtualBox-7.2.0-170228-Win.exe",
+        "os": [
+            "Windows",
+            "Linux",
+            "macOS"
+        ],
+        "tags": [
+            "virtualization"
+        ],
+        "size": "107 MB",
+        "version": "7.2.0",
+        "updated": "2025-06-15",
+        "new_utility": false
     }
-  ]</script>
+]</script>
 
   <script src="script.js"></script>
 </body>
