--- a/index.html
+++ b/index.html
@@ -323,6 +323,23 @@
         "version": "7.2.0",
         "updated": "2025-06-15",
         "new_utility": false
+    },
+    {
+        "id": "AI-Images",
+        "name": "Stable Diffusion AI",
+        "desc": "Инструкция по установки: https://lolz.live/threads/7123311/?ysclid=mftkqvamoe959278584",
+        "href": "https://github.com/serpotapov/stable-diffusion-portable/archive/refs/heads/main.zip",
+        "os": [
+            "Windows"
+        ],
+        "tags": [
+            "images",
+            "AI"
+        ],
+        "size": "158 MB",
+        "version": "lasted",
+        "updated": "2025-06-15",
+        "new_utility": true
     }
 ]</script>
 
