Перенос важные файлы (js, css и img)

--- a/404.html
+++ b/404.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>404 — Страница не найдена</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="icon" href="assets/img/photo_2025-08-03_10-05-43.jpg" />
+  <meta name="description" content="Ошибка 404 — страница не найдена. Вернитесь на главную страницу SaveTools.">
 </head>
 <body>
   <canvas id="bg3d" aria-hidden="true"></canvas>
