--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0b0f0a" />
   <title>SaveTools — Utilities Hub</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="Images/photo_2025-08-03_10-05-43.jpg" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="icon" href="assets/img/photo_2025-08-03_10-05-43.jpg" />
+  <meta name="description" content="PixelGlimmer — личный сайт с проектами, идеями и полезной информацией. Добро пожаловать!">
 </head>
 <body>
   <!-- 3D фон -->
@@ -227,7 +228,7 @@
     {
         "id": "runasti",
         "name": "RunAsTI64",
-        "desc": "Запуск от TrustedInstaller",
+        "desc": "Запуск со правами TrustedInstaller (СИСТЕМА)",
         "href": "https://pixelglimmer.github.io/Programms/RunAsTI64.exe",
         "os": [
             "Windows"
@@ -325,7 +326,7 @@
         "new_utility": false
     },
     {
-        "id": "AI-Images",
+        "id": "ai-images",
         "name": "Stable Diffusion AI",
         "desc": "Инструкция по установки: https://lolz.live/threads/7123311/?ysclid=mftkqvamoe959278584",
         "href": "https://github.com/serpotapov/stable-diffusion-portable/archive/refs/heads/main.zip",
@@ -334,15 +335,15 @@
         ],
         "tags": [
             "images",
-            "AI"
+            "ai"
         ],
         "size": "158 MB",
         "version": "lasted",
-        "updated": "2025-06-15",
+        "updated": "2025-02-15",
         "new_utility": true
     }
 ]</script>
 
-  <script src="script.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
