--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FAQ — Пользователям SaveTools</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="icon" href="assets/img/photo_2025-08-03_10-05-43.jpg" />
+  <meta name="description" content="Ответы на часто задаваемые вопросы о проекте PixelGlimmer. Узнайте больше о сайте и его возможностях.">
   <meta name="theme-color" content="#0b0f0a" />
 </head>
 <body>
