--- a/faq.html
+++ b/faq.html
@@ -8,6 +8,11 @@
   <link rel="icon" href="assets/img/photo_2025-08-03_10-05-43.jpg" />
   <meta name="description" content="Ответы на часто задаваемые вопросы о проекте PixelGlimmer. Узнайте больше о сайте и его возможностях.">
   <meta name="theme-color" content="#0b0f0a" />
+  <!-- Carrot quest BEGIN -->
+<script type="text/javascript">
+!function(){function t(t,e){return function(){window.carrotquestasync.push(t,arguments)}}if("undefined"==typeof carrotquest){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src="https://cdn.carrotquest.app/api.min.js",document.getElementsByTagName("head")[0].appendChild(e),window.carrotquest={},window.carrotquestasync=[],carrotquest.settings={};for(var n=["connect","track","identify","auth","onReady","addCallback","removeCallback","trackMessageInteraction"],a=0;a<n.length;a++)carrotquest[n[a]]=t(n[a])}}(),carrotquest.connect("69187-4aec4f465d57a429fa249d7391");
+</script>
+<!-- Carrot quest END -->
 </head>
 <body>
   <canvas id="bg3d" aria-hidden="true"></canvas>
